java2native/front/java.output
Terminals unused in grammar

   _STRICTFP
   _VOLATILE
   _THROWS
   _ASSERT
   _ENUM


State 47 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce
State 86 conflicts: 2 shift/reduce
State 93 conflicts: 1 shift/reduce
State 98 conflicts: 2 shift/reduce
State 103 conflicts: 2 shift/reduce
State 151 conflicts: 2 shift/reduce
State 152 conflicts: 1 shift/reduce
State 163 conflicts: 1 shift/reduce
State 168 conflicts: 2 shift/reduce
State 169 conflicts: 2 shift/reduce
State 170 conflicts: 2 shift/reduce
State 171 conflicts: 2 shift/reduce
State 172 conflicts: 2 shift/reduce
State 174 conflicts: 2 shift/reduce
State 227 conflicts: 1 shift/reduce
State 238 conflicts: 2 shift/reduce
State 243 conflicts: 1 shift/reduce
State 244 conflicts: 2 shift/reduce
State 245 conflicts: 2 shift/reduce
State 246 conflicts: 2 shift/reduce
State 247 conflicts: 2 shift/reduce
State 248 conflicts: 2 shift/reduce
State 249 conflicts: 2 shift/reduce
State 250 conflicts: 2 shift/reduce
State 251 conflicts: 2 shift/reduce
State 252 conflicts: 2 shift/reduce
State 253 conflicts: 2 shift/reduce
State 254 conflicts: 2 shift/reduce
State 255 conflicts: 2 shift/reduce
State 256 conflicts: 2 shift/reduce
State 257 conflicts: 2 shift/reduce
State 258 conflicts: 2 shift/reduce
State 259 conflicts: 2 shift/reduce
State 260 conflicts: 2 shift/reduce
State 261 conflicts: 2 shift/reduce
State 262 conflicts: 2 shift/reduce
State 263 conflicts: 2 shift/reduce
State 264 conflicts: 2 shift/reduce
State 265 conflicts: 2 shift/reduce
State 266 conflicts: 2 shift/reduce
State 267 conflicts: 2 shift/reduce
State 268 conflicts: 2 shift/reduce
State 269 conflicts: 2 shift/reduce
State 270 conflicts: 2 shift/reduce
State 271 conflicts: 2 shift/reduce
State 272 conflicts: 2 shift/reduce
State 273 conflicts: 2 shift/reduce
State 276 conflicts: 1 shift/reduce
State 278 conflicts: 2 shift/reduce
State 279 conflicts: 2 shift/reduce
State 289 conflicts: 1 shift/reduce
State 294 conflicts: 2 shift/reduce
State 295 conflicts: 2 shift/reduce
State 300 conflicts: 2 shift/reduce
State 315 conflicts: 1 shift/reduce
State 323 conflicts: 38 shift/reduce
State 328 conflicts: 2 shift/reduce
State 331 conflicts: 2 shift/reduce
State 337 conflicts: 2 shift/reduce
State 343 conflicts: 2 shift/reduce
State 345 conflicts: 2 shift/reduce


Grammar

    0 $accept: compilation_unit $end

    1 compilation_unit: package_statement import_statements type_declarations
    2                 | import_statements type_declarations

    3 import_statements: import_statements import_statement
    4                  | %empty

    5 type_declarations: type_declarations type_declaration
    6                  | %empty

    7 package_statement: _PACKAGE class_name _SEMICOLON

    8 import_statement: _IMPORT class_name _POINT _MUL _SEMICOLON
    9                 | _IMPORT class_name _SEMICOLON

   10 class_name: _SYMBOL
   11           | class_name _POINT _SYMBOL

   12 type_declaration: class_declaration
   13                 | interface_declaration

   14 class_declaration: modifiers _CLASS _SYMBOL _EXTENDS class_name _IMPLEMENTS implements _LBRACE field_declarations _RBRACE
   15                  | modifiers _CLASS _SYMBOL _IMPLEMENTS implements _LBRACE field_declarations _RBRACE
   16                  | modifiers _CLASS _SYMBOL _LBRACE field_declarations _RBRACE

   17 modifiers: modifiers modifier
   18          | %empty

   19 modifier: _PRIVATE
   20         | _PROTECTED
   21         | _PUBLIC
   22         | _ABSTRACT
   23         | _FINAL
   24         | _NATIVE
   25         | _STATIC
   26         | _TRANSIENT
   27         | _SYNCHRONIZED

   28 implements: implements _COMMA class_name
   29           | class_name

   30 field_declarations: field_declarations field_declaration
   31                   | %empty

   32 field_declaration: method_declaration
   33                  | constructor_declaration
   34                  | variable_declaration
   35                  | static_initializer
   36                  | _SEMICOLON

   37 method_declaration: modifiers type _SYMBOL _LPARENTHESE parameter_list _RPARENTHESE statement_block
   38                   | modifiers type _SYMBOL _LPARENTHESE _RPARENTHESE statement_block
   39                   | modifiers type _SYMBOL _LPARENTHESE parameter_list _RPARENTHESE _SEMICOLON
   40                   | modifiers type _SYMBOL _LPARENTHESE _RPARENTHESE _SEMICOLON

   41 type: type_specifier brackets

   42 brackets: brackets _LBRACKET _RBRACKET
   43         | %empty

   44 type_specifier: _BOOLEAN
   45               | _BYTE
   46               | _CHAR
   47               | _DOUBLE
   48               | _FLOAT
   49               | _INT
   50               | _LONG
   51               | _SHORT
   52               | _VOID
   53               | _STRING
   54               | class_name

   55 parameter_list: parameter
   56               | parameter_list _COMMA parameter

   57 parameter: type _SYMBOL brackets

   58 statement_block: _LBRACE statements _RBRACE

   59 statements: statements statement
   60           | %empty

   61 statement: variable_declaration
   62          | expression _SEMICOLON
   63          | statement_block
   64          | if_statement
   65          | do_statement
   66          | while_statement
   67          | for_statement
   68          | try_statement
   69          | switch_statement
   70          | _SYNCHRONIZED _LPARENTHESE expression _RPARENTHESE statement_block
   71          | _RETURN expression _SEMICOLON
   72          | _RETURN _SEMICOLON
   73          | _THROW expression _SEMICOLON
   74          | _SYMBOL _COLON statement
   75          | _BREAK _SYMBOL _SEMICOLON
   76          | _BREAK _SEMICOLON
   77          | _CONTINUE _SEMICOLON
   78          | _CONTINUE _SYMBOL _SEMICOLON
   79          | _SEMICOLON

   80 variable_declaration: modifiers type variable_declarators _SEMICOLON

   81 variable_declarators: variable_declarator
   82                     | variable_declarators _COMMA variable_declarator

   83 variable_declarator: _SYMBOL brackets _MOV variable_initializer
   84                    | _SYMBOL brackets

   85 variable_initializer: expression
   86                     | _LBRACE _RBRACE
   87                     | _LBRACE variable_initializers _COMMA _RBRACE
   88                     | _LBRACE variable_initializers _RBRACE

   89 variable_initializers: variable_initializer
   90                      | variable_initializers _COMMA variable_initializer

   91 expression: numeric_expression
   92           | testing_expression
   93           | logical_expression
   94           | bit_expression
   95           | creating_expression
   96           | literal_expression
   97           | _NUL
   98           | _SUPER
   99           | _THIS
  100           | _SYMBOL
  101           | _LPARENTHESE expression _RPARENTHESE
  102           | expression _LPARENTHESE arglist _RPARENTHESE
  103           | expression _LPARENTHESE _RPARENTHESE
  104           | expression _LBRACKET expression _RBRACKET
  105           | expression _POINT expression
  106           | expression _COMMA expression
  107           | expression _INSTANCEOF class_name
  108           | expression _DOUBT expression _COLON expression

  109 numeric_expression: _SUB expression
  110                   | _ADD2 expression
  111                   | _SUB2 expression
  112                   | expression _ADD2
  113                   | expression _SUB2
  114                   | expression _ADD expression
  115                   | expression _SUB expression
  116                   | expression _MUL expression
  117                   | expression _DIV expression
  118                   | expression _MOD expression
  119                   | expression _ADDMOV expression
  120                   | expression _SUBMOV expression
  121                   | expression _MULMOV expression
  122                   | expression _DIVMOV expression
  123                   | expression _MODMOV expression
  124                   | expression _MOV expression

  125 testing_expression: expression _CMP expression
  126                   | expression _NCMP expression
  127                   | expression _MORE expression
  128                   | expression _LESS expression
  129                   | expression _MCMP expression
  130                   | expression _LCMP expression

  131 logical_expression: _BNOT expression
  132                   | expression _BAND expression
  133                   | expression _BOR expression
  134                   | _TRUE
  135                   | _FALSE

  136 bit_expression: _NOT expression
  137               | expression _AND expression
  138               | expression _OR expression
  139               | expression _XOR expression
  140               | expression _SHL expression
  141               | expression _SHR expression
  142               | expression _SAR expression
  143               | expression _SHLMOV expression
  144               | expression _SHRMOV expression
  145               | expression _ANDMOV expression
  146               | expression _XORMOV expression
  147               | expression _ORMOV expression

  148 creating_expression: _NEW class_name _LPARENTHESE _RPARENTHESE
  149                    | _NEW class_name _LPARENTHESE arglist _RPARENTHESE
  150                    | _NEW type_specifier _LBRACKET expression _RBRACKET brackets
  151                    | _NEW type_specifier brackets

  152 arglist: expression
  153        | arglist _COMMA expression

  154 literal_expression: _CUSTCHAR
  155                   | _CUSTSTRING
  156                   | _CUSTINT
  157                   | _CUSTFLOAT

  158 if_statement: _IF _LPARENTHESE expression _RPARENTHESE statement
  159             | _IF _LPARENTHESE expression _RPARENTHESE statement _ELSE statement

  160 do_statement: _DO statement _WHILE _LPARENTHESE expression _RPARENTHESE _SEMICOLON

  161 while_statement: _WHILE _LPARENTHESE expression _RPARENTHESE statement

  162 for_statement: _FOR _LPARENTHESE expression01 _SEMICOLON expression01 _SEMICOLON expression01 _RPARENTHESE statement
  163              | _FOR _LPARENTHESE variable_declaration expression01 _SEMICOLON expression01 _RPARENTHESE statement

  164 expression01: expression
  165             | %empty

  166 try_statement: _TRY statement catchs _FINALLY statement
  167              | _TRY statement catchs

  168 catchs: catchs _CATCH _LPARENTHESE parameter _RPARENTHESE statement
  169       | %empty

  170 switch_statement: _SWITCH _LPARENTHESE expression _RPARENTHESE _LBRACE cases _RBRACE

  171 cases: cases _CASE expression _COLON
  172      | cases _DEFAULT _COLON
  173      | cases statement
  174      | %empty

  175 constructor_declaration: modifiers _SYMBOL _LPARENTHESE parameter_list _RPARENTHESE statement_block
  176                        | modifiers _SYMBOL _LPARENTHESE _RPARENTHESE statement_block

  177 static_initializer: _STATIC statement_block

  178 interface_declaration: modifiers _INTERFACE _SYMBOL _EXTENDS implements _LBRACE field_declarations _RBRACE
  179                      | modifiers _INTERFACE _SYMBOL _LBRACE field_declarations _RBRACE


Terminals, with rules where they appear

$end (0) 0
error (256)
_PRIVATE (258) 19
_PROTECTED (259) 20
_PUBLIC (260) 21
_ABSTRACT (261) 22
_EXTENDS (262) 14 178
_FINAL (263) 23
_IMPLEMENTS (264) 14 15
_NATIVE (265) 24
_NEW (266) 148 149 150 151
_STATIC (267) 25 177
_STRICTFP (268)
_TRANSIENT (269) 26
_VOLATILE (270)
_BREAK (271) 75 76
_CONTINUE (272) 77 78
_RETURN (273) 71 72
_DO (274) 160
_WHILE (275) 160 161
_IF (276) 158 159
_ELSE (277) 159
_FOR (278) 162 163
_INSTANCEOF (279) 107
_SWITCH (280) 170
_CASE (281) 171
_DEFAULT (282) 172
_TRY (283) 166 167
_CATCH (284) 168
_FINALLY (285) 166
_THROW (286) 73
_THROWS (287)
_ASSERT (288)
_SYNCHRONIZED (289) 27 70
_IMPORT (290) 8 9
_PACKAGE (291) 7
_BOOLEAN (292) 44
_BYTE (293) 45
_CHAR (294) 46
_DOUBLE (295) 47
_FLOAT (296) 48
_INT (297) 49
_LONG (298) 50
_SHORT (299) 51
_VOID (300) 52
_STRING (301) 53
_ENUM (302)
_CLASS (303) 14 15 16
_INTERFACE (304) 178 179
_TRUE (305) 134
_FALSE (306) 135
_NUL (307) 97
_SUPER (308) 98
_THIS (309) 99
_ADD (310) 114
_SUB (311) 109 115
_MUL (312) 8 116
_DIV (313) 117
_MOD (314) 118
_ADD2 (315) 110 112
_SUB2 (316) 111 113
_CMP (317) 125
_NCMP (318) 126
_MORE (319) 127
_LESS (320) 128
_MCMP (321) 129
_LCMP (322) 130
_AND (323) 137
_OR (324) 138
_XOR (325) 139
_NOT (326) 136
_SHL (327) 140
_SHR (328) 141
_SAR (329) 142
_BAND (330) 132
_BOR (331) 133
_BNOT (332) 131
_MOV (333) 83 124
_ADDMOV (334) 119
_SUBMOV (335) 120
_MULMOV (336) 121
_DIVMOV (337) 122
_MODMOV (338) 123
_SHLMOV (339) 143
_SHRMOV (340) 144
_ANDMOV (341) 145
_XORMOV (342) 146
_ORMOV (343) 147
_LBRACE (344) 14 15 16 58 86 87 88 170 178 179
_RBRACE (345) 14 15 16 58 86 87 88 170 178 179
_LBRACKET (346) 42 104 150
_RBRACKET (347) 42 104 150
_LPARENTHESE (348) 37 38 39 40 70 101 102 103 148 149 158 159 160 161
    162 163 168 170 175 176
_RPARENTHESE (349) 37 38 39 40 70 101 102 103 148 149 158 159 160 161
    162 163 168 170 175 176
_SEMICOLON (350) 7 8 9 36 39 40 62 71 72 73 75 76 77 78 79 80 160 162
    163
_COMMA (351) 28 56 82 87 90 106 153
_POINT (352) 8 11 105
_DOUBT (353) 108
_COLON (354) 74 108 171 172
_SYMBOL (355) 10 11 14 15 16 37 38 39 40 57 74 75 78 83 84 100 175
    176 178 179
_CUSTCHAR (356) 154
_CUSTSTRING (357) 155
_CUSTINT (358) 156
_CUSTFLOAT (359) 157
UMINUS (360)


Nonterminals, with rules where they appear

$accept (106)
    on left: 0
compilation_unit (107)
    on left: 1 2, on right: 0
import_statements (108)
    on left: 3 4, on right: 1 2 3
type_declarations (109)
    on left: 5 6, on right: 1 2 5
package_statement (110)
    on left: 7, on right: 1
import_statement (111)
    on left: 8 9, on right: 3
class_name (112)
    on left: 10 11, on right: 7 8 9 11 14 28 29 54 107 148 149
type_declaration (113)
    on left: 12 13, on right: 5
class_declaration (114)
    on left: 14 15 16, on right: 12
modifiers (115)
    on left: 17 18, on right: 14 15 16 17 37 38 39 40 80 175 176 178
    179
modifier (116)
    on left: 19 20 21 22 23 24 25 26 27, on right: 17
implements (117)
    on left: 28 29, on right: 14 15 28 178
field_declarations (118)
    on left: 30 31, on right: 14 15 16 30 178 179
field_declaration (119)
    on left: 32 33 34 35 36, on right: 30
method_declaration (120)
    on left: 37 38 39 40, on right: 32
type (121)
    on left: 41, on right: 37 38 39 40 57 80
brackets (122)
    on left: 42 43, on right: 41 42 57 83 84 150 151
type_specifier (123)
    on left: 44 45 46 47 48 49 50 51 52 53 54, on right: 41 150 151
parameter_list (124)
    on left: 55 56, on right: 37 39 56 175
parameter (125)
    on left: 57, on right: 55 56 168
statement_block (126)
    on left: 58, on right: 37 38 63 70 175 176 177
statements (127)
    on left: 59 60, on right: 58 59
statement (128)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79, on right: 59 74 158 159 160 161 162 163 166 167 168 173
variable_declaration (129)
    on left: 80, on right: 34 61 163
variable_declarators (130)
    on left: 81 82, on right: 80 82
variable_declarator (131)
    on left: 83 84, on right: 81 82
variable_initializer (132)
    on left: 85 86 87 88, on right: 83 89 90
variable_initializers (133)
    on left: 89 90, on right: 87 88 90
expression (134)
    on left: 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106
    107 108, on right: 62 70 71 73 85 101 102 103 104 105 106 107 108
    109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124
    125 126 127 128 129 130 131 132 133 136 137 138 139 140 141 142
    143 144 145 146 147 150 152 153 158 159 160 161 164 170 171
numeric_expression (135)
    on left: 109 110 111 112 113 114 115 116 117 118 119 120 121 122
    123 124, on right: 91
testing_expression (136)
    on left: 125 126 127 128 129 130, on right: 92
logical_expression (137)
    on left: 131 132 133 134 135, on right: 93
bit_expression (138)
    on left: 136 137 138 139 140 141 142 143 144 145 146 147, on right:
    94
creating_expression (139)
    on left: 148 149 150 151, on right: 95
arglist (140)
    on left: 152 153, on right: 102 149 153
literal_expression (141)
    on left: 154 155 156 157, on right: 96
if_statement (142)
    on left: 158 159, on right: 64
do_statement (143)
    on left: 160, on right: 65
while_statement (144)
    on left: 161, on right: 66
for_statement (145)
    on left: 162 163, on right: 67
expression01 (146)
    on left: 164 165, on right: 162 163
try_statement (147)
    on left: 166 167, on right: 68
catchs (148)
    on left: 168 169, on right: 166 167 168
switch_statement (149)
    on left: 170, on right: 69
cases (150)
    on left: 171 172 173 174, on right: 170 171 172 173
constructor_declaration (151)
    on left: 175 176, on right: 33
static_initializer (152)
    on left: 177, on right: 35
interface_declaration (153)
    on left: 178 179, on right: 13


State 0

    0 $accept: . compilation_unit $end

    _PACKAGE  shift, and go to state 1

    $default  reduce using rule 4 (import_statements)

    compilation_unit   go to state 2
    import_statements  go to state 3
    package_statement  go to state 4


State 1

    7 package_statement: _PACKAGE . class_name _SEMICOLON

    _SYMBOL  shift, and go to state 5

    class_name  go to state 6


State 2

    0 $accept: compilation_unit . $end

    $end  shift, and go to state 7


State 3

    2 compilation_unit: import_statements . type_declarations
    3 import_statements: import_statements . import_statement

    _IMPORT  shift, and go to state 8

    $default  reduce using rule 6 (type_declarations)

    type_declarations  go to state 9
    import_statement   go to state 10


State 4

    1 compilation_unit: package_statement . import_statements type_declarations

    $default  reduce using rule 4 (import_statements)

    import_statements  go to state 11


State 5

   10 class_name: _SYMBOL .

    $default  reduce using rule 10 (class_name)


State 6

    7 package_statement: _PACKAGE class_name . _SEMICOLON
   11 class_name: class_name . _POINT _SYMBOL

    _SEMICOLON  shift, and go to state 12
    _POINT      shift, and go to state 13


State 7

    0 $accept: compilation_unit $end .

    $default  accept


State 8

    8 import_statement: _IMPORT . class_name _POINT _MUL _SEMICOLON
    9                 | _IMPORT . class_name _SEMICOLON

    _SYMBOL  shift, and go to state 5

    class_name  go to state 14


State 9

    2 compilation_unit: import_statements type_declarations .
    5 type_declarations: type_declarations . type_declaration

    $end      reduce using rule 2 (compilation_unit)
    $default  reduce using rule 18 (modifiers)

    type_declaration       go to state 15
    class_declaration      go to state 16
    modifiers              go to state 17
    interface_declaration  go to state 18


State 10

    3 import_statements: import_statements import_statement .

    $default  reduce using rule 3 (import_statements)


State 11

    1 compilation_unit: package_statement import_statements . type_declarations
    3 import_statements: import_statements . import_statement

    _IMPORT  shift, and go to state 8

    $default  reduce using rule 6 (type_declarations)

    type_declarations  go to state 19
    import_statement   go to state 10


State 12

    7 package_statement: _PACKAGE class_name _SEMICOLON .

    $default  reduce using rule 7 (package_statement)


State 13

   11 class_name: class_name _POINT . _SYMBOL

    _SYMBOL  shift, and go to state 20


State 14

    8 import_statement: _IMPORT class_name . _POINT _MUL _SEMICOLON
    9                 | _IMPORT class_name . _SEMICOLON
   11 class_name: class_name . _POINT _SYMBOL

    _SEMICOLON  shift, and go to state 21
    _POINT      shift, and go to state 22


State 15

    5 type_declarations: type_declarations type_declaration .

    $default  reduce using rule 5 (type_declarations)


State 16

   12 type_declaration: class_declaration .

    $default  reduce using rule 12 (type_declaration)


State 17

   14 class_declaration: modifiers . _CLASS _SYMBOL _EXTENDS class_name _IMPLEMENTS implements _LBRACE field_declarations _RBRACE
   15                  | modifiers . _CLASS _SYMBOL _IMPLEMENTS implements _LBRACE field_declarations _RBRACE
   16                  | modifiers . _CLASS _SYMBOL _LBRACE field_declarations _RBRACE
   17 modifiers: modifiers . modifier
  178 interface_declaration: modifiers . _INTERFACE _SYMBOL _EXTENDS implements _LBRACE field_declarations _RBRACE
  179                      | modifiers . _INTERFACE _SYMBOL _LBRACE field_declarations _RBRACE

    _PRIVATE       shift, and go to state 23
    _PROTECTED     shift, and go to state 24
    _PUBLIC        shift, and go to state 25
    _ABSTRACT      shift, and go to state 26
    _FINAL         shift, and go to state 27
    _NATIVE        shift, and go to state 28
    _STATIC        shift, and go to state 29
    _TRANSIENT     shift, and go to state 30
    _SYNCHRONIZED  shift, and go to state 31
    _CLASS         shift, and go to state 32
    _INTERFACE     shift, and go to state 33

    modifier  go to state 34


State 18

   13 type_declaration: interface_declaration .

    $default  reduce using rule 13 (type_declaration)


State 19

    1 compilation_unit: package_statement import_statements type_declarations .
    5 type_declarations: type_declarations . type_declaration

    $end      reduce using rule 1 (compilation_unit)
    $default  reduce using rule 18 (modifiers)

    type_declaration       go to state 15
    class_declaration      go to state 16
    modifiers              go to state 17
    interface_declaration  go to state 18


State 20

   11 class_name: class_name _POINT _SYMBOL .

    $default  reduce using rule 11 (class_name)


State 21

    9 import_statement: _IMPORT class_name _SEMICOLON .

    $default  reduce using rule 9 (import_statement)


State 22

    8 import_statement: _IMPORT class_name _POINT . _MUL _SEMICOLON
   11 class_name: class_name _POINT . _SYMBOL

    _MUL     shift, and go to state 35
    _SYMBOL  shift, and go to state 20


State 23

   19 modifier: _PRIVATE .

    $default  reduce using rule 19 (modifier)


State 24

   20 modifier: _PROTECTED .

    $default  reduce using rule 20 (modifier)


State 25

   21 modifier: _PUBLIC .

    $default  reduce using rule 21 (modifier)


State 26

   22 modifier: _ABSTRACT .

    $default  reduce using rule 22 (modifier)


State 27

   23 modifier: _FINAL .

    $default  reduce using rule 23 (modifier)


State 28

   24 modifier: _NATIVE .

    $default  reduce using rule 24 (modifier)


State 29

   25 modifier: _STATIC .

    $default  reduce using rule 25 (modifier)


State 30

   26 modifier: _TRANSIENT .

    $default  reduce using rule 26 (modifier)


State 31

   27 modifier: _SYNCHRONIZED .

    $default  reduce using rule 27 (modifier)


State 32

   14 class_declaration: modifiers _CLASS . _SYMBOL _EXTENDS class_name _IMPLEMENTS implements _LBRACE field_declarations _RBRACE
   15                  | modifiers _CLASS . _SYMBOL _IMPLEMENTS implements _LBRACE field_declarations _RBRACE
   16                  | modifiers _CLASS . _SYMBOL _LBRACE field_declarations _RBRACE

    _SYMBOL  shift, and go to state 36


State 33

  178 interface_declaration: modifiers _INTERFACE . _SYMBOL _EXTENDS implements _LBRACE field_declarations _RBRACE
  179                      | modifiers _INTERFACE . _SYMBOL _LBRACE field_declarations _RBRACE

    _SYMBOL  shift, and go to state 37


State 34

   17 modifiers: modifiers modifier .

    $default  reduce using rule 17 (modifiers)


State 35

    8 import_statement: _IMPORT class_name _POINT _MUL . _SEMICOLON

    _SEMICOLON  shift, and go to state 38


State 36

   14 class_declaration: modifiers _CLASS _SYMBOL . _EXTENDS class_name _IMPLEMENTS implements _LBRACE field_declarations _RBRACE
   15                  | modifiers _CLASS _SYMBOL . _IMPLEMENTS implements _LBRACE field_declarations _RBRACE
   16                  | modifiers _CLASS _SYMBOL . _LBRACE field_declarations _RBRACE

    _EXTENDS     shift, and go to state 39
    _IMPLEMENTS  shift, and go to state 40
    _LBRACE      shift, and go to state 41


State 37

  178 interface_declaration: modifiers _INTERFACE _SYMBOL . _EXTENDS implements _LBRACE field_declarations _RBRACE
  179                      | modifiers _INTERFACE _SYMBOL . _LBRACE field_declarations _RBRACE

    _EXTENDS  shift, and go to state 42
    _LBRACE   shift, and go to state 43


State 38

    8 import_statement: _IMPORT class_name _POINT _MUL _SEMICOLON .

    $default  reduce using rule 8 (import_statement)


State 39

   14 class_declaration: modifiers _CLASS _SYMBOL _EXTENDS . class_name _IMPLEMENTS implements _LBRACE field_declarations _RBRACE

    _SYMBOL  shift, and go to state 5

    class_name  go to state 44


State 40

   15 class_declaration: modifiers _CLASS _SYMBOL _IMPLEMENTS . implements _LBRACE field_declarations _RBRACE

    _SYMBOL  shift, and go to state 5

    class_name  go to state 45
    implements  go to state 46


State 41

   16 class_declaration: modifiers _CLASS _SYMBOL _LBRACE . field_declarations _RBRACE

    $default  reduce using rule 31 (field_declarations)

    field_declarations  go to state 47


State 42

  178 interface_declaration: modifiers _INTERFACE _SYMBOL _EXTENDS . implements _LBRACE field_declarations _RBRACE

    _SYMBOL  shift, and go to state 5

    class_name  go to state 45
    implements  go to state 48


State 43

  179 interface_declaration: modifiers _INTERFACE _SYMBOL _LBRACE . field_declarations _RBRACE

    $default  reduce using rule 31 (field_declarations)

    field_declarations  go to state 49


State 44

   11 class_name: class_name . _POINT _SYMBOL
   14 class_declaration: modifiers _CLASS _SYMBOL _EXTENDS class_name . _IMPLEMENTS implements _LBRACE field_declarations _RBRACE

    _IMPLEMENTS  shift, and go to state 50
    _POINT       shift, and go to state 13


State 45

   11 class_name: class_name . _POINT _SYMBOL
   29 implements: class_name .

    _POINT  shift, and go to state 13

    $default  reduce using rule 29 (implements)


State 46

   15 class_declaration: modifiers _CLASS _SYMBOL _IMPLEMENTS implements . _LBRACE field_declarations _RBRACE
   28 implements: implements . _COMMA class_name

    _LBRACE  shift, and go to state 51
    _COMMA   shift, and go to state 52


State 47

   16 class_declaration: modifiers _CLASS _SYMBOL _LBRACE field_declarations . _RBRACE
   30 field_declarations: field_declarations . field_declaration

    _STATIC     shift, and go to state 53
    _RBRACE     shift, and go to state 54
    _SEMICOLON  shift, and go to state 55

    _STATIC   [reduce using rule 18 (modifiers)]
    $default  reduce using rule 18 (modifiers)

    modifiers                go to state 56
    field_declaration        go to state 57
    method_declaration       go to state 58
    variable_declaration     go to state 59
    constructor_declaration  go to state 60
    static_initializer       go to state 61


State 48

   28 implements: implements . _COMMA class_name
  178 interface_declaration: modifiers _INTERFACE _SYMBOL _EXTENDS implements . _LBRACE field_declarations _RBRACE

    _LBRACE  shift, and go to state 62
    _COMMA   shift, and go to state 52


State 49

   30 field_declarations: field_declarations . field_declaration
  179 interface_declaration: modifiers _INTERFACE _SYMBOL _LBRACE field_declarations . _RBRACE

    _STATIC     shift, and go to state 53
    _RBRACE     shift, and go to state 63
    _SEMICOLON  shift, and go to state 55

    _STATIC   [reduce using rule 18 (modifiers)]
    $default  reduce using rule 18 (modifiers)

    modifiers                go to state 56
    field_declaration        go to state 57
    method_declaration       go to state 58
    variable_declaration     go to state 59
    constructor_declaration  go to state 60
    static_initializer       go to state 61


State 50

   14 class_declaration: modifiers _CLASS _SYMBOL _EXTENDS class_name _IMPLEMENTS . implements _LBRACE field_declarations _RBRACE

    _SYMBOL  shift, and go to state 5

    class_name  go to state 45
    implements  go to state 64


State 51

   15 class_declaration: modifiers _CLASS _SYMBOL _IMPLEMENTS implements _LBRACE . field_declarations _RBRACE

    $default  reduce using rule 31 (field_declarations)

    field_declarations  go to state 65


State 52

   28 implements: implements _COMMA . class_name

    _SYMBOL  shift, and go to state 5

    class_name  go to state 66


State 53

  177 static_initializer: _STATIC . statement_block

    _LBRACE  shift, and go to state 67

    statement_block  go to state 68


State 54

   16 class_declaration: modifiers _CLASS _SYMBOL _LBRACE field_declarations _RBRACE .

    $default  reduce using rule 16 (class_declaration)


State 55

   36 field_declaration: _SEMICOLON .

    $default  reduce using rule 36 (field_declaration)


State 56

   17 modifiers: modifiers . modifier
   37 method_declaration: modifiers . type _SYMBOL _LPARENTHESE parameter_list _RPARENTHESE statement_block
   38                   | modifiers . type _SYMBOL _LPARENTHESE _RPARENTHESE statement_block
   39                   | modifiers . type _SYMBOL _LPARENTHESE parameter_list _RPARENTHESE _SEMICOLON
   40                   | modifiers . type _SYMBOL _LPARENTHESE _RPARENTHESE _SEMICOLON
   80 variable_declaration: modifiers . type variable_declarators _SEMICOLON
  175 constructor_declaration: modifiers . _SYMBOL _LPARENTHESE parameter_list _RPARENTHESE statement_block
  176                        | modifiers . _SYMBOL _LPARENTHESE _RPARENTHESE statement_block

    _PRIVATE       shift, and go to state 23
    _PROTECTED     shift, and go to state 24
    _PUBLIC        shift, and go to state 25
    _ABSTRACT      shift, and go to state 26
    _FINAL         shift, and go to state 27
    _NATIVE        shift, and go to state 28
    _STATIC        shift, and go to state 29
    _TRANSIENT     shift, and go to state 30
    _SYNCHRONIZED  shift, and go to state 31
    _BOOLEAN       shift, and go to state 69
    _BYTE          shift, and go to state 70
    _CHAR          shift, and go to state 71
    _DOUBLE        shift, and go to state 72
    _FLOAT         shift, and go to state 73
    _INT           shift, and go to state 74
    _LONG          shift, and go to state 75
    _SHORT         shift, and go to state 76
    _VOID          shift, and go to state 77
    _STRING        shift, and go to state 78
    _SYMBOL        shift, and go to state 79

    class_name      go to state 80
    modifier        go to state 34
    type            go to state 81
    type_specifier  go to state 82


State 57

   30 field_declarations: field_declarations field_declaration .

    $default  reduce using rule 30 (field_declarations)


State 58

   32 field_declaration: method_declaration .

    $default  reduce using rule 32 (field_declaration)


State 59

   34 field_declaration: variable_declaration .

    $default  reduce using rule 34 (field_declaration)


State 60

   33 field_declaration: constructor_declaration .

    $default  reduce using rule 33 (field_declaration)


State 61

   35 field_declaration: static_initializer .

    $default  reduce using rule 35 (field_declaration)


State 62

  178 interface_declaration: modifiers _INTERFACE _SYMBOL _EXTENDS implements _LBRACE . field_declarations _RBRACE

    $default  reduce using rule 31 (field_declarations)

    field_declarations  go to state 83


State 63

  179 interface_declaration: modifiers _INTERFACE _SYMBOL _LBRACE field_declarations _RBRACE .

    $default  reduce using rule 179 (interface_declaration)


State 64

   14 class_declaration: modifiers _CLASS _SYMBOL _EXTENDS class_name _IMPLEMENTS implements . _LBRACE field_declarations _RBRACE
   28 implements: implements . _COMMA class_name

    _LBRACE  shift, and go to state 84
    _COMMA   shift, and go to state 52


State 65

   15 class_declaration: modifiers _CLASS _SYMBOL _IMPLEMENTS implements _LBRACE field_declarations . _RBRACE
   30 field_declarations: field_declarations . field_declaration

    _STATIC     shift, and go to state 53
    _RBRACE     shift, and go to state 85
    _SEMICOLON  shift, and go to state 55

    _STATIC   [reduce using rule 18 (modifiers)]
    $default  reduce using rule 18 (modifiers)

    modifiers                go to state 56
    field_declaration        go to state 57
    method_declaration       go to state 58
    variable_declaration     go to state 59
    constructor_declaration  go to state 60
    static_initializer       go to state 61


State 66

   11 class_name: class_name . _POINT _SYMBOL
   28 implements: implements _COMMA class_name .

    _POINT  shift, and go to state 13

    $default  reduce using rule 28 (implements)


State 67

   58 statement_block: _LBRACE . statements _RBRACE

    $default  reduce using rule 60 (statements)

    statements  go to state 86


State 68

  177 static_initializer: _STATIC statement_block .

    $default  reduce using rule 177 (static_initializer)


State 69

   44 type_specifier: _BOOLEAN .

    $default  reduce using rule 44 (type_specifier)


State 70

   45 type_specifier: _BYTE .

    $default  reduce using rule 45 (type_specifier)


State 71

   46 type_specifier: _CHAR .

    $default  reduce using rule 46 (type_specifier)


State 72

   47 type_specifier: _DOUBLE .

    $default  reduce using rule 47 (type_specifier)


State 73

   48 type_specifier: _FLOAT .
